Fix scrollbars issue in CSS

--- a/app/assets/css/wallet/wallet.less
+++ b/app/assets/css/wallet/wallet.less
@@ -8,7 +8,7 @@
 
   #navigation_controller_content {
     padding: @metrics-large-padding @metrics-medium-padding;
-    overflow: scroll;
+    overflow: auto;
   }
 }
 
